<resources>
    <string name="app_name">Reversible Learning</string>
    <string name="make_flashcard">Make Flashcard</string>
    <string name="make_question">Enter Question</string>
    <string name="create_flashcard">Create Flashcard</string>
    <string name="folders">Folders</string>
    <string name="create_quiz">Create Quiz</string>
    <string name="create_test">Create Test</string>
    <string name="Guest">Guest</string>
    <string name="Login">Login</string>
    <string name="login_failed">"Login failed. Either your email address or password is incorrect."</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="welcome">"Welcome "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="app_logo">"App Logo"</string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="type_here">Type Here</string>
    <string name="flip">Flip</string>
    <string name="dashboard">Dashboard</string>
    <string name="manageYourCards">Manage Your Cards</string>
    <string name="dashboard_main_image">DashBoard Main Image</string>
    <string name="make_flashcard_image">Make flashcard Image</string>
    <string name="folders_image">Folders Image</string>
    <string name="create_quiz_image">Create Quiz Image</string>
    <string name="card_shelf">Card Shelf</string>
    <string name="create_an_account">Create an Account</string>
    <string name="friendsCount">1</string>
    <string name="friends">Friends</string>
    <string name="cards">Cards</string>
    <string name="cardCount">1</string>
    <string name="Username">Username</string>
    <string name="profile">Profile</string>
    <string name="myProfile">My Profile</string>
    <string name="Delete_button">Delete Button</string>
    <string name="home_button">Home Button</string>
    <string name="next_button">Next Button</string>
    <string name="previous_button">Previous Button</string>
    <string name="my_cards">My Cards</string>
    <string name="gotoDashboard">My Dashboard</string>
    <string name="addToFolder">Add to Folder</string>
    <string name="new_folder">New Folder</string>
    <string name="create_folder">Create Folder</string>
    <string name="folder_name">Folder Name</string>
    <string name="delete_folder">Delete Folder</string>
    <string name="remove_card">Remove Card</string>
    <string name="favoriteCountInt">1</string>
    <string name="profilepagecardlogoDescription">Profile Page Card Logo Description</string>
    <string name="favoriteCountIntDescription">1</string>
    <string name="password">Password</string>
    <string name="add_to_favourites">Add To Favourites</string>


</resources>