<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yollowish"
    tools:context="presentation.FolderViewActivity">

    <TextView
        android:id="@+id/folder_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="89dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="89dp"
        android:layout_marginBottom="555dp"
        android:background="@color/yollowish"
        android:fontFamily="@font/baloo"
        android:gravity="center"
        android:text="@string/folders"
        android:textAlignment="center"
        android:textColor="@color/grayish"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/deleteFolder"
        android:fontFamily="@font/baloo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="53dp"
        android:backgroundTint="@color/yollowishButtonColor"
        android:onClick="delFolder"
        android:text="@string/delete_folder"
        android:textColor="@color/grayish"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/remove_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/folder_name" />

    <Button
        android:id="@+id/remove_card"
        android:fontFamily="@font/baloo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="52dp"
        android:backgroundTint="@color/yollowishButtonColor"
        android:onClick="removeCard"
        android:text="@string/remove_card"
        android:textColor="@color/grayish"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/deleteFolder"
        app:layout_constraintTop_toBottomOf="@+id/folder_name" />

    <TextView
        android:id="@+id/shelfCard2"
        android:layout_width="258dp"
        android:layout_height="260dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="168dp"
        android:background="@color/yollowishButtonColor"
        android:gravity="center"
        android:text="@string/question"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deleteFolder" />

    <ImageView
        android:id="@+id/next_button2"
        android:layout_width="65dp"
        android:layout_height="75dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="279dp"
        android:contentDescription="@string/next_button"
        android:onClick="nextCard2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/shelfCard2"
        app:layout_constraintTop_toBottomOf="@+id/remove_card"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_baseline_arrow_right_24" />

    <ImageView
        android:id="@+id/previous_button2"
        android:layout_width="65dp"
        android:layout_height="75dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="279dp"
        android:contentDescription="@string/previous_button"
        android:onClick="prevCard2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/shelfCard2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deleteFolder"
        app:srcCompat="@drawable/ic_baseline_arrow_left_24" />

    <Button
        android:id="@+id/flip_button3"
        android:fontFamily="@font/baloo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="97dp"
        android:backgroundTint="@color/white"
        android:onClick="flipButton3"
        android:text="@string/flip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shelfCard2" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="61dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="334dp"
        android:layout_marginBottom="117dp"
        android:contentDescription="@string/home_button"
        android:onClick="openOptionsActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_home_24" />

</androidx.constraintlayout.widget.ConstraintLayout>